--- a/TextRpg/TextRpg.csproj
+++ b/TextRpg/TextRpg.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Player - 복사.cs" />
+  </ItemGroup>
+
 </Project>
