--- a/TextRpg/TextRpg.csproj
+++ b/TextRpg/TextRpg.csproj
@@ -11,4 +11,8 @@
     <Compile Remove="Player - 복사.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.50.0" />
+  </ItemGroup>
+
 </Project>
