feat : BGM관련 클래스 추가
- BGM관련 클래스 추가

--- a/TextRpg/TextRpg.csproj
+++ b/TextRpg/TextRpg.csproj
@@ -11,4 +11,17 @@
     <Compile Remove="Player - 복사.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Sounds\Dungeon.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Sounds\Main.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
